Buttons were misaligned, bug fixed

--- a/pagebuilder/inc/admin-amp-page-builder.css
+++ b/pagebuilder/inc/admin-amp-page-builder.css
@@ -3,7 +3,7 @@
 **/
 .amppb_welcome{
 position: absolute;
-    top: -45px;
+    top: -36px;
     right: 34px;
 }
 #pagebilder_content h2 span{
